Zoo Management/main/default/objects/NewTicket__c/NewTicket__c.object-meta.xml
<CustomObject>
    <label>NewTicket</label>
    <nameField>
        <label>NewTicket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewTIckets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>