Zoo Management/main/default/objects/NewTicket__c/fields/Foreigner__c.field-meta.xml
<CustomField>
    <fullName>Foreigner__c</fullName>
    <label>Foreigner</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>