Zoo Management/main/default/objects/NewTicket__c/fields/Regular__c.field-meta.xml
<CustomField>
    <fullName>Regular__c</fullName>
    <label>Regular</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>