Zoo Management/main/default/objects/NewTicket__c/fields/TicketId__c.field-meta.xml
<CustomField>
    <fullName>TicketId__c</fullName>
    <displayFormat>T-{00000}</displayFormat>
    <label>TicketId</label>
    <type>AutoNumber</type>
</CustomField>