Zoo Management/main/default/objects/NewTicket__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>