Zoo Management/main/default/objects/NewTicket__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Foreigner__c</columns>
    <columns>Regular__c</columns>
    <columns>Student__c</columns>
    <columns>TicketId__c</columns>
    <columns>Total__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>